[gd_scene load_steps=24 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/weapons/sword0.png" type="Texture" id=2]
[ext_resource path="res://assets/weapons/sword1.png" type="Texture" id=3]
[ext_resource path="res://assets/weapons/sword2.png" type="Texture" id=4]
[ext_resource path="res://assets/weapons/sword3.png" type="Texture" id=5]
[ext_resource path="res://assets/weapons/sword4.png" type="Texture" id=6]
[ext_resource path="res://assets/weapons/sword5.png" type="Texture" id=7]
[ext_resource path="res://assets/player.png" type="Texture" id=8]
[ext_resource path="res://assets/sounds/player_mele_hit.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/player_mele.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/death.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/level_up.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/weapons/special0.png" type="Texture" id=13]
[ext_resource path="res://assets/weapons/special1.png" type="Texture" id=14]
[ext_resource path="res://assets/weapons/special2.png" type="Texture" id=15]
[ext_resource path="res://assets/weapons/special3.png" type="Texture" id=16]
[ext_resource path="res://assets/weapons/special4.png" type="Texture" id=17]
[ext_resource path="res://assets/weapons/special5.png" type="Texture" id=18]
[ext_resource path="res://assets/sounds/player_special.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/sounds/player_ranged_hit.wav" type="AudioStream" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "default",
"speed": 25.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ null, ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), null ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 200.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 682.093, 385.488 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AttackAnimation" type="AnimatedSprite" parent="."]
position = Vector2( -24.5545, -29.6507 )
z_index = 1
frames = SubResource( 1 )
frame = 10

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 8 )

[node name="PleyerCollision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 58.7649, 3.6994, 49.3337, 11.7437, 32.6556, 16.759, 28.2863, 31.0587, 17.9886, 35.5992, 9.66693, 42.8114, -11.6921, 41.7018, -19.3794, 33.8392, -29.3098, 28.2782, -29.707, 15.9645, -46.0884, 14.2402, -56.3518, 7.58289, -62.4544, -6.00922, -52.191, -15.1631, -31.2958, -15.4153, -17.7905, -13.4293, 0.481323, -18.9903, 15.5754, -15.0181, 31.0668, -15.8126, 48.7789, -14.0535, 62.0936, -7.67358 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="Mele" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="Swoosh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="Death" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
position = Vector2( -960, -540 )
stream = ExtResource( 11 )

[node name="LevelUp" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 12 )

[node name="SpecialAnimation" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 2 )
frame = 7

[node name="Special" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )

[node name="Ranged" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )

[node name="SpecialRange" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )

[node name="SpecialCollision" type="CollisionShape2D" parent="SpecialRange"]
shape = SubResource( 3 )

[connection signal="body_entered" from="SpecialRange" to="." method="_on_SpecialRange_body_entered"]
[connection signal="body_exited" from="SpecialRange" to="." method="_on_SpecialRange_body_exited"]
